syntax = "proto3";
package types;

message ReceiptV1_2 {
    bytes version = 1;
	bytes PostState = 2;
	int64 CumulativeGasUsed = 3;
	bytes TxHash = 4;
	bytes ContractAddress = 5;
    int64 GasUsed = 6;
    bytes Ret = 7;
    bytes Logs = 8;
    STATUS Status = 9;
    bytes Message = 10;
    enum STATUS {
        SUCCESS       = 0;
        FAILED        = 1;
    }
}

